--- a/DemoWeb/Views/Home/About.cshtml
+++ b/DemoWeb/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>About: Community Open Camp Demo</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<img src="~/Content/logo.png"  />
