--- a/DemoWeb/Views/Home/About.cshtml
+++ b/DemoWeb/Views/Home/About.cshtml
@@ -1,7 +1,11 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>About: Community Open Camp Demo</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Community Open Camp Demo</h2>
+@*<h3>@ViewBag.Message</h3>*@
 
-<img src="~/Content/logo.png"  />
+<h3>Server IP: @ViewBag.ServerIP</h3>
+<h3>Server Ver: @ViewBag.Version</h3>
+
+<hr />
+<img src="Logo"  />
